infrastructure/elastic/deploy-elastic.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure

---
# Elasticsearch Deployment, Service, Ingress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: infrastructure
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
      containers:
        - name: elasticsearch
          image: 10.20.50.25:8081/elasticsearch/elasticsearch:8.13.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          ports:
            - name: http
              containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: infrastructure
spec:
  ingressClassName: haproxy
  rules:
    - host: elastic.infrastructure.kub.k2.lan
      http:
        paths:
          - path: /elasticsearch
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200

--- # Kibana Deployment, Service, Ingress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: infrastructure
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      volumes:
        - name: kibana-data
          persistentVolumeClaim:
            claimName: kibana-pvc
      containers:
        - name: kibana
          image: 10.20.50.25:8081/kibana/kibana:8.13.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
          ports:
            - name: http
              containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
    - name: http
      protocol: TCP
      port: 5601
      targetPort: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: infrastructure
spec:
  ingressClassName: haproxy
  rules:
    - host: kibana.infrastructure.kub.k2.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601

--- # ElasticApm Deployment, Service, Ingress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm-server
  namespace: infrastructure
  labels:
    app: apm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apm-server
  template:
    metadata:
      labels:
        app: apm-server
    spec:
      volumes:
        - name: apm-server-data
          persistentVolumeClaim:
            claimName: elastic-apm-pvc
      containers:
        - name: apm-server
          image: 10.20.50.25:8081/apm/apm-server:8.13.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: apm-server-data
              mountPath: /usr/share/apm-server/data
          ports:
            - name: http
              containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: apm-server
  ports:
    - name: http
      protocol: TCP
      port: 8200
      targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-server
  namespace: infrastructure
spec:
  ingressClassName: haproxy
  rules:
    - host: apm.infrastructure.kub.k2.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-server
                port:
                  number: 8200

--- # Secrets
apiVersion: v1
kind: Secret
metadata:
  name: "elastic-user-secret"
  namespace: infrastructure
stringData:
  ELASTIC_USERNAME: elastic
  ELASTIC_PASSWORD: changeme

---
